Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71378

Regression: QWebEngineSettings::ScrollAnimatorEnabled has no effect in Qt >= 5.11

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Beta 4
    • 5.11.2, 5.12.0 Beta 2
    • WebEngine
    • None
    • Windows
    • 8eda96bc8ae68387807e079cd557c98c4a452c4f (qt/qtwebengine/5.12.0)

    Description

      QWebEngineSettings::ScrollAnimatorEnabled has no effect in Qt >= 5.11
      Actually this settings working not on every page with Qt 5.9.6, but it absolutely not working since Qt 5.11
      As you can see on video attached scrolling is not smooth, that is the problem

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            pokamest Anton Bulychev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes