Fix smooth-scrolling of mouse wheels

Turns out has_precise_scrolling_deltas, doesn't mean what its name says,
but instead is a macOS'ism indicating a system scroll gesture.

Fixes: QTBUG-71378
Change-Id: I124ba8f64495671e8a8ad7a9c397fb506d7fedf9
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>